Added Topic Modeling

--- a/code-along/day-6/topic_modeling/(1) LDA Scikit Learn.ipynb
+++ b/code-along/day-6/topic_modeling/(1) LDA Scikit Learn.ipynb
@@ -3,16 +3,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e11d86b7",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "!python -m spacy download en"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "64c28aae",
    "metadata": {},
    "outputs": [],
@@ -21,12 +11,12 @@
     "import re\n",
     "import spacy\n",
     "\n",
-    "from nltk.corpus import stopwords \n",
-    "from nltk.stem.wordnet import WordNetLemmatizer\n",
+    "from nltk.corpus import  \n",
+    "from nltk.stem.wordnet import \n",
     "import string\n",
     "\n",
     "# import vectorizers\n",
-    "from sklearn.feature_extraction.text import TfidfVectorizer, CountVectorizer\n",
+    "from sklearn.feature_extraction.text import \n",
     "\n",
     "# import numpy for matrix operation\n",
     "import numpy as np\n",
