--- a/code-along/day-5/5 Data Analysis - Similarity and Vectors.ipynb
+++ b/code-along/day-5/5 Data Analysis - Similarity and Vectors.ipynb
@@ -264,21 +264,78 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "e2305f1d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[-1.8118e+00 -5.6273e-01 -7.5114e+00  8.5512e-01  1.2175e+00 -1.7836e+00\n",
+      "  4.7941e-01  4.6596e+00 -3.0954e-01  3.5020e+00  5.3085e-01 -4.0581e-01\n",
+      " -7.1077e+00 -6.7238e-01 -1.7542e-01 -3.2585e+00  1.2579e+00 -3.1151e+00\n",
+      "  4.8207e+00 -8.2008e+00  8.2521e+00  7.9034e+00 -7.8063e-01 -1.0899e+00\n",
+      "  1.0327e+00 -3.2580e+00 -4.6962e+00 -4.3370e+00  9.4675e-01  3.3962e+00\n",
+      " -3.0879e+00 -2.6910e+00  3.8249e+00 -7.3663e+00  1.7923e+00 -4.3222e+00\n",
+      " -3.2337e+00  4.5257e+00  3.9472e+00 -1.3006e-03  3.8278e+00 -1.3748e+00\n",
+      "  1.2577e+00  5.1395e+00 -4.9224e-01  1.0932e+01  2.1762e+00 -1.5409e+00\n",
+      "  8.6067e-01 -2.6455e-01  3.8578e+00  3.8850e+00 -1.2039e+00 -4.9394e+00\n",
+      " -4.2849e+00  1.6063e+00  5.3465e-01 -9.3394e-01  7.1071e+00 -3.1704e+00\n",
+      " -4.6974e-01 -2.4645e-01  6.3121e+00  8.7384e-01 -2.6521e+00  4.7564e+00\n",
+      " -5.5277e-01  1.6540e+00 -1.0013e+00 -4.8532e-01  1.3037e+00  3.0900e+00\n",
+      " -2.3013e+00  1.1694e+00  1.2835e+00  1.6579e+00 -5.5598e+00  1.3146e+00\n",
+      " -9.4131e-02  1.6557e+00 -3.4837e+00 -4.6339e+00 -6.9904e-01 -6.7269e+00\n",
+      "  1.7207e+00  4.9154e+00 -2.3790e+00  1.1672e+01  2.6053e+00  4.2558e+00\n",
+      "  4.0955e+00  6.0124e-01 -3.1555e+00 -1.9227e+00 -1.0271e+00 -8.5267e-01\n",
+      "  9.5294e+00 -1.8598e+00  1.5295e+00 -7.3080e-01 -1.2480e+00  1.6489e+00\n",
+      "  8.1874e+00 -4.1004e+00 -2.0643e+00  5.2815e+00 -4.7684e+00 -3.4881e+00\n",
+      " -2.4118e+00 -1.2367e+00  1.7583e-01  4.0122e+00  2.6803e+00  3.7138e-01\n",
+      " -3.9179e+00 -2.0658e+00  2.2511e+00 -4.8065e-01  7.0398e+00 -1.0843e+00\n",
+      "  1.2491e-01  7.3166e-01 -5.7608e+00  2.5319e+00 -5.9025e+00 -6.5185e+00\n",
+      " -1.8146e+00 -2.9361e+00  3.8777e+00  2.4849e+00 -2.4871e+00  2.9743e+00\n",
+      "  6.1293e+00 -4.8607e+00 -4.1823e-02 -2.2594e+00 -6.3824e+00 -2.4643e+00\n",
+      " -7.8569e-01  2.3952e+00  2.1920e+00 -3.0672e+00  2.7162e-01 -6.0438e-01\n",
+      "  2.2357e+00 -4.4692e+00 -4.9409e+00 -1.6956e-02  3.0023e-01  1.0483e+00\n",
+      "  7.1728e-01  5.1957e+00  2.0162e+00 -2.6864e+00  9.1350e-01 -4.1660e-01\n",
+      " -4.5937e-01 -2.5549e+00  5.1465e+00  2.2225e+00 -1.1170e+00 -6.5939e+00\n",
+      "  2.7662e+00 -2.0124e-01  3.7366e+00  2.3698e+00 -3.1875e+00  7.4338e+00\n",
+      " -2.7039e+00  2.5304e+00 -3.2630e+00  1.8116e-01  4.6187e+00 -9.1240e-01\n",
+      "  2.6347e+00 -4.0061e+00  2.2042e+00  2.9899e+00 -1.9044e+00 -2.7834e+00\n",
+      " -1.5250e+00  1.3935e+00 -1.9773e+00  4.8804e-01  2.5350e+00 -2.7826e+00\n",
+      "  6.2767e+00  1.5896e+00 -1.4427e+00  1.8928e-01  3.7885e+00 -6.0516e-01\n",
+      " -8.8845e-01 -2.5348e+00 -3.6416e+00  2.6735e-01 -5.9231e+00  2.6100e+00\n",
+      "  4.6446e-02  8.1921e-01  5.2804e+00 -5.0667e-01  9.9709e-01  1.4694e+00\n",
+      "  7.7271e+00 -4.2488e-01 -2.3475e+00 -7.8209e+00  6.5848e-01 -6.2410e-01\n",
+      " -2.8206e+00  5.1388e-01 -2.7368e+00  1.6894e+00  5.7222e+00  1.0868e+00\n",
+      "  4.4359e+00 -4.3815e+00 -1.5853e+00 -1.9864e+00  8.7305e+00 -1.4088e+00\n",
+      " -5.6012e-01  5.4745e-01 -1.6540e+00  1.8616e-01  1.6268e+00  6.2168e+00\n",
+      "  3.5482e+00  7.6232e+00 -2.9862e+00 -2.5089e+00 -3.1403e+00 -2.0887e-02\n",
+      " -5.1171e+00  5.0652e+00 -2.2156e+00  5.4296e+00  3.0791e+00 -4.7384e+00\n",
+      " -4.2634e-01  2.9030e-01  8.8494e-02 -8.8298e-01 -1.0185e+00  3.4772e+00\n",
+      " -3.5927e+00  8.7989e-01  1.5428e+00  7.6177e-01 -2.8022e+00 -3.7128e-01\n",
+      " -2.7697e+00 -1.4450e+00 -2.0211e+00 -1.7747e+00 -2.8118e+00  5.6313e+00\n",
+      " -3.6364e+00  2.0707e+00  2.5237e+00  2.0278e+00  2.0195e+00  5.8731e-01\n",
+      " -1.0910e+00 -2.7206e+00 -2.1103e+00  7.1498e+00 -6.3717e+00  2.9211e+00\n",
+      "  4.3464e+00 -1.8818e+00  2.6904e+00 -3.5723e+00  1.8260e-01 -9.6123e-01\n",
+      " -1.6149e+00 -1.6503e+00 -4.2579e+00  2.8211e+00 -1.8047e-01  4.0986e+00\n",
+      "  1.7949e+00 -1.7107e+00  4.3223e+00 -4.4373e+00 -5.0471e+00  2.2581e+00\n",
+      " -4.0144e+00  7.6616e-01  2.1941e+00  1.1978e+00  3.0081e+00  1.5735e+00\n",
+      "  7.7075e-02 -5.4455e+00  2.5474e+00 -2.1249e+00 -1.4056e+00 -2.0186e+00]\n"
+     ]
+    }
+   ],
    "source": [
     "import spacy\n",
     "\n",
     "# Load the en_core_web_md pipeline\n",
-    "nlp = ____\n",
+    "nlp = spacy.load(\"en_core_web_md\")\n",
     "\n",
     "# Process a text\n",
     "doc = nlp(\"Two apples in trees\")\n",
     "\n",
-    "# Get the vector for the token \"bananas\"\n",
-    "bananas_vector = ____.____\n",
+    "# Get the vector for the token \"trees\"\n",
+    "bananas_vector = doc[3].vector\n",
     "print(bananas_vector)"
    ]
   },
@@ -292,10 +349,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "1beb3d86",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.8220092482601077\n"
+     ]
+    }
+   ],
    "source": [
     "import spacy\n",
     "\n",
@@ -305,7 +370,7 @@
     "doc2 = nlp(\"It's sunny outside\")\n",
     "\n",
     "# Get the similarity of doc1 and doc2\n",
-    "similarity = ____.____(____)\n",
+    "similarity = doc1.similarity(doc2)\n",
     "print(similarity)"
    ]
   },
@@ -319,10 +384,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "5c7400df",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.10219937562942505\n"
+     ]
+    }
+   ],
    "source": [
     "import spacy\n",
     "\n",
@@ -332,7 +405,7 @@
     "token1, token2 = doc[0], doc[2]\n",
     "\n",
     "# Get the similarity of the tokens \"TV\" and \"books\"\n",
-    "similarity = ____.____(____)\n",
+    "similarity = token1.similarity(token2)\n",
     "print(similarity)"
    ]
   },
@@ -346,10 +419,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "2d915ee0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.6348510384559631\n"
+     ]
+    }
+   ],
    "source": [
     "import spacy\n",
     "\n",
@@ -358,11 +439,11 @@
     "doc = nlp(\"This was a great restaurant. Afterwards, we went to a really nice bar.\")\n",
     "\n",
     "# Create spans for \"great restaurant\" and \"really nice bar\"\n",
-    "span1 = ____\n",
-    "span2 = ____\n",
+    "span1 = doc[3:5]\n",
+    "span2 =  doc[-4:-1]\n",
     "\n",
     "# Get the similarity of the spans\n",
-    "similarity = ____.____(____)\n",
+    "similarity = span1.similarity(span2)\n",
     "print(similarity)"
    ]
   },
