--- a/code-along/day-5/7 Processing Pipelines.ipynb
+++ b/code-along/day-5/7 Processing Pipelines.ipynb
@@ -125,10 +125,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "f5bd1327",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "animal_patterns: [Golden Retriever, cat, turtle, Rattus norvegicus]\n",
+      "['tok2vec', 'tagger', 'parser', 'attribute_ruler', 'lemmatizer', 'ner', 'animal_component']\n"
+     ]
+    }
+   ],
    "source": [
     "import spacy\n",
     "from spacy.language import Language\n",
@@ -140,27 +149,108 @@
     "animal_patterns = list(nlp.pipe(animals))\n",
     "print(\"animal_patterns:\", animal_patterns)\n",
     "matcher = PhraseMatcher(nlp.vocab)\n",
-    "matcher.add(\"ANIMAL\", animal_patterns)\n",
+    "matcher.add(\"ANIMAL_PATTERN\", animal_patterns)\n",
     "\n",
     "# Define the custom component\n",
     "@Language.component(\"animal_component\")\n",
     "def animal_component_function(doc):\n",
     "    # Apply the matcher to the doc\n",
-    "    matches = ____\n",
+    "    matches = matcher(doc)\n",
     "    # Create a Span for each match and assign the label \"ANIMAL\"\n",
-    "    spans = [Span(____, ____, ___, label=____) for match_id, start, end in matches]\n",
+    "    spans = [Span(doc, start, end, label=\"ANIMAL\") for match_id, start, end in matches]\n",
     "    # Overwrite the doc.ents with the matched spans\n",
     "    doc.ents = spans\n",
     "    return doc\n",
     "\n",
     "\n",
     "# Add the component to the pipeline after the \"ner\" component\n",
-    "____.____(____, ____=____)\n",
+    "nlp.add_pipe(\"animal_component\", after=\"ner\")\n",
     "print(nlp.pipe_names)\n",
     "\n",
-    "# Process the text and print the text and label for the doc.ents\n",
+    "# # Process the text and print the text and label for the doc.ents\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "468d85f9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[('cat', 'ANIMAL'), ('Golden Retriever', 'ANIMAL')]\n"
+     ]
+    }
+   ],
+   "source": [
     "doc = nlp(\"I have a cat and a Golden Retriever\")\n",
-    "print([(____, ____) for ent in ____])"
+    "print([(ent.text, ent.label_) for ent in doc.ents])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "4dc1504c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\rheyannmagcalas\\anaconda3\\lib\\site-packages\\spacy\\displacy\\__init__.py:103: UserWarning: [W011] It looks like you're calling displacy.serve from within a Jupyter notebook or a similar environment. This likely means you're already running a local web server, so there's no need to make displaCy start another one. Instead, you should be able to replace displacy.serve with displacy.render to show the visualization.\n",
+      "  warnings.warn(Warnings.W011)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<span class=\"tex2jax_ignore\"><!DOCTYPE html>\n",
+       "<html lang=\"en\">\n",
+       "    <head>\n",
+       "        <title>displaCy</title>\n",
+       "    </head>\n",
+       "\n",
+       "    <body style=\"font-size: 16px; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol'; padding: 4rem 2rem; direction: ltr\">\n",
+       "<figure style=\"margin-bottom: 6rem\">\n",
+       "<div class=\"entities\" style=\"line-height: 2.5; direction: ltr\">I have a \n",
+       "<mark class=\"entity\" style=\"background: #ddd; padding: 0.45em 0.6em; margin: 0 0.25em; line-height: 1; border-radius: 0.35em;\">\n",
+       "    cat\n",
+       "    <span style=\"font-size: 0.8em; font-weight: bold; line-height: 1; border-radius: 0.35em; vertical-align: middle; margin-left: 0.5rem\">ANIMAL</span>\n",
+       "</mark>\n",
+       " and a \n",
+       "<mark class=\"entity\" style=\"background: #ddd; padding: 0.45em 0.6em; margin: 0 0.25em; line-height: 1; border-radius: 0.35em;\">\n",
+       "    Golden Retriever\n",
+       "    <span style=\"font-size: 0.8em; font-weight: bold; line-height: 1; border-radius: 0.35em; vertical-align: middle; margin-left: 0.5rem\">ANIMAL</span>\n",
+       "</mark>\n",
+       "</div>\n",
+       "</figure>\n",
+       "</body>\n",
+       "</html></span>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Using the 'ent' visualizer\n",
+      "Serving on http://0.0.0.0:5000 ...\n",
+      "\n",
+      "Shutting down server on port 5000.\n"
+     ]
+    }
+   ],
+   "source": [
+    "from spacy import displacy\n",
+    "displacy.serve(doc, style=\"ent\")"
    ]
   }
  ],
