Added Day 7 Network Analysis

--- a/code-along/day-6/topic_modeling/(1) LDA.ipynb
+++ b/code-along/day-6/topic_modeling/(1) LDA.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "0cee98fc",
    "metadata": {},
    "outputs": [],
@@ -23,18 +23,18 @@
     "import pandas as  pd\n",
     "from pprint import pprint# Gensim\n",
     "import gensim\n",
-    "import gensim.corpora as \n",
-    "from gensim.utils import \n",
-    "from gensim.models import \n",
+    "import gensim.corpora as corpora\n",
+    "from gensim.utils import simple_preprocess\n",
+    "from gensim.models import CoherenceModel\n",
     "import spacy\n",
     "import pyLDAvis\n",
-    "import pyLDAvis.gensim_models as \n",
+    "import pyLDAvis.gensim_models as gensimvis\n",
     "import matplotlib.pyplot as plt"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "fab4fcfa",
    "metadata": {},
    "outputs": [],
@@ -47,10 +47,104 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "644ceaa7",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['rec.autos' 'comp.sys.mac.hardware' 'comp.graphics' 'sci.space'\n",
+      " 'talk.politics.guns' 'sci.med' 'comp.sys.ibm.pc.hardware'\n",
+      " 'comp.os.ms-windows.misc' 'rec.motorcycles' 'talk.religion.misc'\n",
+      " 'misc.forsale' 'alt.atheism' 'sci.electronics' 'comp.windows.x'\n",
+      " 'rec.sport.hockey' 'rec.sport.baseball' 'soc.religion.christian'\n",
+      " 'talk.politics.mideast' 'talk.politics.misc' 'sci.crypt']\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>content</th>\n",
+       "      <th>target</th>\n",
+       "      <th>target_names</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>From: lerxst@wam.umd.edu (where's my thing)\\nS...</td>\n",
+       "      <td>7</td>\n",
+       "      <td>rec.autos</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>From: guykuo@carson.u.washington.edu (Guy Kuo)...</td>\n",
+       "      <td>4</td>\n",
+       "      <td>comp.sys.mac.hardware</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>From: twillis@ec.ecn.purdue.edu (Thomas E Will...</td>\n",
+       "      <td>4</td>\n",
+       "      <td>comp.sys.mac.hardware</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>From: jgreen@amber (Joe Green)\\nSubject: Re: W...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>comp.graphics</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>From: jcm@head-cfa.harvard.edu (Jonathan McDow...</td>\n",
+       "      <td>14</td>\n",
+       "      <td>sci.space</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                             content  target  \\\n",
+       "0  From: lerxst@wam.umd.edu (where's my thing)\\nS...       7   \n",
+       "1  From: guykuo@carson.u.washington.edu (Guy Kuo)...       4   \n",
+       "2  From: twillis@ec.ecn.purdue.edu (Thomas E Will...       4   \n",
+       "3  From: jgreen@amber (Joe Green)\\nSubject: Re: W...       1   \n",
+       "4  From: jcm@head-cfa.harvard.edu (Jonathan McDow...      14   \n",
+       "\n",
+       "            target_names  \n",
+       "0              rec.autos  \n",
+       "1  comp.sys.mac.hardware  \n",
+       "2  comp.sys.mac.hardware  \n",
+       "3          comp.graphics  \n",
+       "4              sci.space  "
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# LoadDataset\n",
     "df=pd.read_json('newsgroups.json')\n",
@@ -60,10 +154,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "14cc9dd2",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(11314, 3)"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "df.shape"
    ]
@@ -78,10 +183,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "c4eb680d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "<>:5: DeprecationWarning: invalid escape sequence \\S\n",
+      "<>:5: DeprecationWarning: invalid escape sequence \\S\n",
+      "C:\\Users\\rheyannmagcalas\\AppData\\Local\\Temp\\ipykernel_14388\\3221428114.py:5: DeprecationWarning: invalid escape sequence \\S\n",
+      "  data = [re.sub('\\S*@\\S*\\s?', '', sent) for sent in data]\n"
+     ]
+    }
+   ],
    "source": [
     "# Convert to list \n",
     "data = df.content.values.tolist()\n",
@@ -92,10 +208,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "5792afd4",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "<>:2: DeprecationWarning: invalid escape sequence \\s\n",
+      "<>:2: DeprecationWarning: invalid escape sequence \\s\n",
+      "C:\\Users\\rheyannmagcalas\\AppData\\Local\\Temp\\ipykernel_14388\\1119172684.py:2: DeprecationWarning: invalid escape sequence \\s\n",
+      "  data = [re.sub('\\s+', ' ', sent) for sent in data]\n"
+     ]
+    }
+   ],
    "source": [
     "# Remove new line characters \n",
     "data = [re.sub('\\s+', ' ', sent) for sent in data]  "
@@ -103,10 +230,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "00c3910d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['From: (wheres my thing) Subject: WHAT car is this!? Nntp-Posting-Host: '\n",
+      " 'rac3.wam.umd.edu Organization: University of Maryland, College Park Lines: '\n",
+      " '15 I was wondering if anyone out there could enlighten me on this car I saw '\n",
+      " 'the other day. It was a 2-door sports car, looked to be from the late 60s/ '\n",
+      " 'early 70s. It was called a Bricklin. The doors were really small. In '\n",
+      " 'addition, the front bumper was separate from the rest of the body. This is '\n",
+      " 'all I know. If anyone can tellme a model name, engine specs, years of '\n",
+      " 'production, where this car is made, history, or whatever info you have on '\n",
+      " 'this funky looking car, please e-mail. Thanks, - IL ---- brought to you by '\n",
+      " 'your neighborhood Lerxst ---- ']\n"
+     ]
+    }
+   ],
    "source": [
     "# Remove distracting single quotes \n",
     "data = [re.sub(\"\\'\", \"\", sent) for sent in data]  \n",
@@ -123,17 +267,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "ada6bdec",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[['from', 'wheres', 'my', 'thing', 'subject', 'what', 'car', 'is', 'this', 'nntp', 'posting', 'host', 'rac', 'wam', 'umd', 'edu', 'organization', 'university', 'of', 'maryland', 'college', 'park', 'lines', 'was', 'wondering', 'if', 'anyone', 'out', 'there', 'could', 'enlighten', 'me', 'on', 'this', 'car', 'saw', 'the', 'other', 'day', 'it', 'was', 'door', 'sports', 'car', 'looked', 'to', 'be', 'from', 'the', 'late', 'early', 'it', 'was', 'called', 'bricklin', 'the', 'doors', 'were', 'really', 'small', 'in', 'addition', 'the', 'front', 'bumper', 'was', 'separate', 'from', 'the', 'rest', 'of', 'the', 'body', 'this', 'is', 'all', 'know', 'if', 'anyone', 'can', 'tellme', 'model', 'name', 'engine', 'specs', 'years', 'of', 'production', 'where', 'this', 'car', 'is', 'made', 'history', 'or', 'whatever', 'info', 'you', 'have', 'on', 'this', 'funky', 'looking', 'car', 'please', 'mail', 'thanks', 'il', 'brought', 'to', 'you', 'by', 'your', 'neighborhood', 'lerxst']]\n"
+     ]
+    }
+   ],
    "source": [
     "def sent_to_words(sentences):\n",
     "    for sentence in sentences:\n",
     "        yield(gensim.utils.simple_preprocess(str(sentence), deacc=True))            #deacc=True removes punctuations\n",
     "\n",
     "data_words = list(sent_to_words(data))\n",
-    "print(data_words[:1])"
+    "print(data_words[:1]) "
    ]
   },
   {
@@ -146,25 +298,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "3751fd71",
    "metadata": {},
    "outputs": [],
    "source": [
-    "bigram = gensim.models.(data_words, min_count=5, threshold=100) # higher threshold fewer phrases.\n",
-    "trigram = gensim.models.(bigram[data_words], threshold=100)"
+    "bigram = gensim.models.Phrases(data_words, min_count=5, threshold=100) # higher threshold fewer phrases.\n",
+    "trigram = gensim.models.Phrases(bigram[data_words], threshold=100)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "fb776e78",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['from', 'wheres', 'my', 'thing', 'subject', 'what', 'car', 'is', 'this', 'nntp_posting_host', 'rac_wam_umd_edu', 'organization', 'university', 'of', 'maryland_college_park', 'lines', 'was', 'wondering', 'if', 'anyone', 'out', 'there', 'could', 'enlighten', 'me', 'on', 'this', 'car', 'saw', 'the', 'other', 'day', 'it', 'was', 'door', 'sports', 'car', 'looked', 'to', 'be', 'from', 'the', 'late', 'early', 'it', 'was', 'called', 'bricklin', 'the', 'doors', 'were', 'really', 'small', 'in', 'addition', 'the', 'front_bumper', 'was', 'separate', 'from', 'the', 'rest', 'of', 'the', 'body', 'this', 'is', 'all', 'know', 'if', 'anyone', 'can', 'tellme', 'model', 'name', 'engine', 'specs', 'years', 'of', 'production', 'where', 'this', 'car', 'is', 'made', 'history', 'or', 'whatever', 'info', 'you', 'have', 'on', 'this', 'funky', 'looking', 'car', 'please', 'mail', 'thanks', 'il', 'brought', 'to', 'you', 'by', 'your', 'neighborhood', 'lerxst']\n"
+     ]
+    }
+   ],
    "source": [
     "# Faster way to get a sentence clubbed as a trigram/bigram\n",
-    "bigram_mod = gensim.models.phrases.(bigram)\n",
-    "trigram_mod = gensim.models.phrases.(trigram)\n",
+    "bigram_mod = gensim.models.phrases.Phraser(bigram)\n",
+    "trigram_mod = gensim.models.phrases.Phraser(trigram)\n",
     "\n",
     "# See trigram example\n",
     "print(trigram_mod[bigram_mod[data_words[0]]])"
