--- a/code-along/day-6/topic_modeling/(4) HDP.ipynb
+++ b/code-along/day-6/topic_modeling/(4) HDP.ipynb
@@ -2,17 +2,6 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "6b24d7a2",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "!pip install pyLDAvis\n",
-    "!pip install gensim"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 1,
    "id": "0cee98fc",
    "metadata": {},
@@ -23,12 +12,12 @@
     "import pandas as  pd\n",
     "from pprint import pprint# Gensim\n",
     "import gensim\n",
-    "import gensim.corpora as corpora\n",
+    "import gensim.corpora as \n",
     "from gensim.utils import simple_preprocess\n",
-    "from gensim.models import CoherenceModel\n",
+    "from gensim.models import \n",
     "import spacy\n",
     "import pyLDAvis\n",
-    "import pyLDAvis.gensim_models as gensimvis\n",
+    "import pyLDAvis.gensim_models as \n",
     "import matplotlib.pyplot as plt"
    ]
   },
@@ -283,11 +272,11 @@
     }
    ],
    "source": [
-    "bigram = gensim.models.Phrases(data_words, min_count=5, threshold=100) # higher threshold fewer phrases.\n",
-    "trigram = gensim.models.Phrases(bigram[data_words], threshold=100)\n",
+    "bigram = gensim.models.(data_words, min_count=5, threshold=100) # higher threshold fewer phrases.\n",
+    "trigram = gensim.models.(bigram[data_words], threshold=100)\n",
     "# Faster way to get a sentence clubbed as a trigram/bigram\n",
-    "bigram_mod = gensim.models.phrases.Phraser(bigram)\n",
-    "trigram_mod = gensim.models.phrases.Phraser(trigram)\n",
+    "bigram_mod = gensim.models.phrases.(bigram)\n",
+    "trigram_mod = gensim.models.phrases.(trigram)\n",
     "# See trigram example\n",
     "print(trigram_mod[bigram_mod[data_words[0]]])"
    ]
@@ -359,7 +348,7 @@
     "nlp = spacy.load('en_core_web_sm', disable=['parser', 'ner'])\n",
     "\n",
     "# Do lemmatization keeping only noun, adj, vb, adv\n",
-    "data_lemmatized = lemmatization(data_words_bigrams, allowed_postags=['NOUN', 'ADJ', 'VERB', 'ADV'])\n",
+    "data_lemmatized = (data_words_bigrams, allowed_postags=['NOUN', 'ADJ', 'VERB', 'ADV'])\n",
     "\n",
     "print(data_lemmatized[:1])"
    ]
@@ -372,7 +361,7 @@
    "outputs": [],
    "source": [
     "# Create Dictionary \n",
-    "id2word = corpora.Dictionary(data_lemmatized)  \n",
+    "id2word = (data_lemmatized)  \n",
     "# Create Corpus \n",
     "texts = data_lemmatized  "
    ]
@@ -393,7 +382,7 @@
    ],
    "source": [
     "# Term Document Frequency \n",
-    "corpus = [id2word.doc2bow(text) for text in texts]  \n",
+    "corpus = [w(text) for text in texts]  \n",
     "# View \n",
     "print(corpus[:1])"
    ]
@@ -494,7 +483,7 @@
     }
    ],
    "source": [
-    "hdpmodel =  gensim.models.hdpmodel.HdpModel(corpus=corpus, id2word=id2word)\n",
+    "hdpmodel =  gensim.models.hdpmodel.(corpus=corpus, id2word=id2word)\n",
     "hdpmodel.show_topics()"
    ]
   },
