Added Day 8 Files

--- a/code-along/day-6/topic_modeling/(1) LDA.ipynb
+++ b/code-along/day-6/topic_modeling/(1) LDA.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 33,
    "id": "0cee98fc",
    "metadata": {},
    "outputs": [],
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 34,
    "id": "fab4fcfa",
    "metadata": {},
    "outputs": [],
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 36,
    "id": "644ceaa7",
    "metadata": {},
    "outputs": [
@@ -140,7 +140,7 @@
        "4              sci.space  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -154,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 37,
    "id": "14cc9dd2",
    "metadata": {},
    "outputs": [
@@ -164,7 +164,7 @@
        "(11314, 3)"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -183,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 38,
    "id": "c4eb680d",
    "metadata": {},
    "outputs": [
@@ -193,7 +193,7 @@
      "text": [
       "<>:5: DeprecationWarning: invalid escape sequence \\S\n",
       "<>:5: DeprecationWarning: invalid escape sequence \\S\n",
-      "C:\\Users\\rheyannmagcalas\\AppData\\Local\\Temp\\ipykernel_14388\\3221428114.py:5: DeprecationWarning: invalid escape sequence \\S\n",
+      "C:\\Users\\rheyannmagcalas\\AppData\\Local\\Temp\\ipykernel_14740\\3221428114.py:5: DeprecationWarning: invalid escape sequence \\S\n",
       "  data = [re.sub('\\S*@\\S*\\s?', '', sent) for sent in data]\n"
      ]
     }
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 40,
    "id": "5792afd4",
    "metadata": {},
    "outputs": [
@@ -218,7 +218,7 @@
      "text": [
       "<>:2: DeprecationWarning: invalid escape sequence \\s\n",
       "<>:2: DeprecationWarning: invalid escape sequence \\s\n",
-      "C:\\Users\\rheyannmagcalas\\AppData\\Local\\Temp\\ipykernel_14388\\1119172684.py:2: DeprecationWarning: invalid escape sequence \\s\n",
+      "C:\\Users\\rheyannmagcalas\\AppData\\Local\\Temp\\ipykernel_14740\\1119172684.py:2: DeprecationWarning: invalid escape sequence \\s\n",
       "  data = [re.sub('\\s+', ' ', sent) for sent in data]\n"
      ]
     }
@@ -230,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 41,
    "id": "00c3910d",
    "metadata": {},
    "outputs": [
@@ -267,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 42,
    "id": "ada6bdec",
    "metadata": {},
    "outputs": [
@@ -298,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 14,
    "id": "3751fd71",
    "metadata": {},
    "outputs": [],
@@ -309,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 15,
    "id": "fb776e78",
    "metadata": {},
    "outputs": [
@@ -340,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "id": "45925a06",
    "metadata": {},
    "outputs": [],
@@ -349,23 +349,24 @@
     "    return [[word for word in (str(doc)) if word not in stop_words] for doc in texts]\n",
     "\n",
     "def make_bigrams(texts):\n",
-    "    return [[doc] for doc in texts]\n",
+    "    return [bigram_mod[doc] for doc in texts]\n",
     "\n",
     "def make_trigrams(texts):\n",
-    "    return [[bigram_mod[doc]] for doc in texts]\n",
+    "    return [trigram_mod[bigram_mod[doc]] for doc in texts]\n",
     "\n",
     "def lemmatization(texts, allowed_postags=['NOUN', 'ADJ', 'VERB', 'ADV']):\n",
     "    \"\"\"https://spacy.io/api/annotation\"\"\"\n",
     "    texts_out = []\n",
     "    for sent in texts:\n",
-    "        doc = nlp(\" \".join(sent)) \n",
-    "        texts_out.append([token. for token in doc if token. in allowed_postags])\n",
+    "        if len(sent):\n",
+    "            doc = nlp(\" \".join(sent)) \n",
+    "            texts_out.append([token.lemma_ for token in doc if token.pos_ in allowed_postags])\n",
     "    return texts_out"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "id": "662ee652",
    "metadata": {},
    "outputs": [],
@@ -376,7 +377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "id": "41c9cb38",
    "metadata": {},
    "outputs": [],
@@ -387,22 +388,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "id": "6694b4b9",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\rheyannmagcalas\\anaconda3\\lib\\site-packages\\spacy\\language.py:1895: UserWarning: [W123] Argument disable with value ['parser', 'ner'] is used instead of ['senter'] as specified in the config. Be aware that this might affect other components in your pipeline.\n",
+      "  warnings.warn(\n"
+     ]
+    }
+   ],
    "source": [
     "# Initialize spacy 'en' model, keeping only tagger component (for efficiency)\n",
     "# python3 -m spacy download en\n",
-    "nlp = spacy.load('', disable=['parser', 'ner'])"
+    "nlp = spacy.load('en_core_web_sm', disable=['parser', 'ner'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "id": "6fbdc302",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "sequence item 0: expected str instance, list found",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Input \u001b[1;32mIn [32]\u001b[0m, in \u001b[0;36m<cell line: 2>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m# Do lemmatization keeping only noun, adj, vb, adv\u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m data_lemmatized \u001b[38;5;241m=\u001b[39m \u001b[43mlemmatization\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdata_words_bigrams\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mallowed_postags\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mNOUN\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mADJ\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mVERB\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mADV\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m)\u001b[49m\n",
+      "Input \u001b[1;32mIn [31]\u001b[0m, in \u001b[0;36mlemmatization\u001b[1;34m(texts, allowed_postags)\u001b[0m\n\u001b[0;32m     13\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m sent \u001b[38;5;129;01min\u001b[39;00m texts:\n\u001b[0;32m     14\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mlen\u001b[39m(sent):\n\u001b[1;32m---> 15\u001b[0m         doc \u001b[38;5;241m=\u001b[39m nlp(\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43m \u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mjoin\u001b[49m\u001b[43m(\u001b[49m\u001b[43msent\u001b[49m\u001b[43m)\u001b[49m) \n\u001b[0;32m     16\u001b[0m         texts_out\u001b[38;5;241m.\u001b[39mappend([token\u001b[38;5;241m.\u001b[39mlemma_ \u001b[38;5;28;01mfor\u001b[39;00m token \u001b[38;5;129;01min\u001b[39;00m doc \u001b[38;5;28;01mif\u001b[39;00m token\u001b[38;5;241m.\u001b[39mpos_ \u001b[38;5;129;01min\u001b[39;00m allowed_postags])\n\u001b[0;32m     17\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m texts_out\n",
+      "\u001b[1;31mTypeError\u001b[0m: sequence item 0: expected str instance, list found"
+     ]
+    }
+   ],
    "source": [
     "# Do lemmatization keeping only noun, adj, vb, adv\n",
     "data_lemmatized = lemmatization(data_words_bigrams, allowed_postags=['NOUN', 'ADJ', 'VERB', 'ADV'])\n",
